Update 1_createdb.sql, EditingVocabulary.js, EditPanelVocabularyTab.js, swagger.yaml, file_controller.py, vocabulary_controller.py, editing_vocabulary.py Create TextFieldOfTermDescription.js, TextFieldOfOtherVocSynUri.js
