# api/openapi/swagger.yaml
@@ -445,6 +445,8 @@ components:
           type: string
         preferred_label:
           type: string
+        language:
+          type: string
         uri:
           type: string
         broader_term:
@@ -453,6 +455,14 @@ components:
           type: array
           items:
             type: string
+        other_voc_syn_uri:
+          type: string
+        term_description:
+          type: string
+        created_time:
+          type: string
+        modified_time:
+          type: string
         synonym_candidate:
           type: array
           items:
@@ -461,8 +471,6 @@ components:
           type: array
           items:
             type: string
-        part_of_speech:
-          type: string
         postion_x:
           type: string
         postion_y:
@@ -475,12 +483,16 @@ components:
         id: 1
         term: os
         preferred_label: os
+        language: ja
         uri: http://test/0/os
-        broader_term: ソフトウェア
+        broader_term: http://myVocab/3
         synonym: オペレーティングシステム
+        other_voc_syn_uri: http://otherVocab/16
+        term_description: 用語の説明です
+        created_time: "2021-04-02T12:43:02Z"
+        modified_time: "2021-04-08T16:07:59Z"
         synonym_candidate: 基本ソフト
         broader_term_candidate: プログラム
-        part_of_speech: 名詞
         postion_x: "100"
         postion_y: "100"
         color1: black
@@ -521,12 +533,16 @@ components:
         - id: 1
           term: os
           preferred_label: os
+          language: ja
           uri: http://test/0/os
-          broader_term: ソフトウェア
+          broader_term: http://myVocab/3
           synonym: オペレーティングシステム
+          other_voc_syn_uri: http://otherVocab/16
+          term_description: 用語の説明です
+          created_time: "2021-04-02T12:43:02Z"
+          modified_time: "2021-04-08T16:07:59Z"
           synonym_candidate: 基本ソフト
           broader_term_candidate: プログラム
-          part_of_speech: 名詞
           postion_x: "100"
           postion_y: "100"
           color1: black
